--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "@rokmohar/medusa-plugin-meilisearch": "1.3.5",
     "awilix": "^8.0.1",
     "medusajs-launch-utils": "0.0.18",
+    "mercadopago": "^2.11.0",
     "minio": "^8.0.3",
     "pg": "^8.13.1",
     "resend": "4.0.1",
