--- a/storefront/package.json
+++ b/storefront/package.json
@@ -36,6 +36,7 @@
     "axios": "^1.6.7",
     "lodash": "^4.17.21",
     "medusajs-launch-utils": "0.0.18",
+    "mercadopago": "^2.11.0",
     "next": "^14.0.0",
     "pg": "^8.11.3",
     "qs": "^6.12.1",
