Notificaciones de compra

--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@medusajs/draft-order": "^2.10.2",
     "@medusajs/framework": "2.10.2",
     "@medusajs/medusa": "2.10.2",
+    "@medusajs/notification-local": "^2.12.3",
     "@medusajs/notification-sendgrid": "2.10.2",
     "@medusajs/payment-stripe": "2.10.2",
     "@medusajs/utils": "^2.12.3",
