--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@medusajs/admin-sdk": "2.10.2",
+    "@medusajs/admin-shared": "^2.12.3",
     "@medusajs/cli": "2.10.2",
     "@medusajs/dashboard": "2.10.2",
     "@medusajs/draft-order": "^2.10.2",
@@ -53,8 +54,8 @@
     "@swc/jest": "^0.2.37",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.10",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "jest": "^29.7.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
