--- a/backend/src/admin/tsconfig.json
+++ b/backend/src/admin/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "module": "esnext"
+    "jsx": "react-jsx",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"]
   },
   "include": ["."],
   "exclude": ["**/*.spec.js"]
