--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "@medusajs/admin-sdk": "2.10.2",
     "@medusajs/admin-shared": "^2.12.3",
     "@medusajs/cli": "2.10.2",
+    "@medusajs/core-flows": "^2.12.3",
     "@medusajs/dashboard": "2.10.2",
     "@medusajs/draft-order": "^2.10.2",
     "@medusajs/framework": "2.10.2",
