--- a/backend/package.json
+++ b/backend/package.json
@@ -41,7 +41,7 @@
     "medusajs-launch-utils": "0.0.18",
     "mercadopago": "^2.11.0",
     "minio": "^8.0.3",
-    "pg": "^8.13.1",
+    "pg": "^8.16.3",
     "resend": "4.0.1",
     "ulid": "^2.3.0"
   },
@@ -52,6 +52,7 @@
     "@swc/jest": "^0.2.37",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.10",
+    "@types/pg": "^8.16.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "jest": "^29.7.0",
